Added an option toggle camera views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MarkMe</string>
+    <string name="capture">Take a Photo</string>
+    <string name="ToggleCameraView">Toggle the camera view</string>
+    <string name="faceView">FACE</string>
+    <string name="frontView">FRONT</string>
 </resources>
