Completed the UI for account settings, userinfo
I had to comment out some lines for patient and care provider so my
project could buidl.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="maleText">Male</string>
     <string name="emailHint">Email:</string>
     <string name="phoneHint">Phone:</string>
+    <string name="accountSettingsText">Account Information:</string>
+    <string name="contactInformationText">Contact Information:</string>
+    <string name="editContactInfoText">Edit Contact Information</string>
+    <string name="resetPasswordText">Reset Password</string>
 </resources>
