--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,12 @@
     <string name="signupPrompt">Please enter the required information to register an account:</string>
     <string name="femaleText">Female</string>
     <string name="maleText">Male</string>
-    <string name="emailHint">Email:</string>
-    <string name="phoneHint">Phone:</string>
+    <string name="emailHint">Email: example@domain.com</string>
+    <string name="phoneHint">Phone: XXX-XXX-XXXX</string>
     <string name="accountSettingsText">Account Information:</string>
     <string name="contactInformationText">Contact Information:</string>
     <string name="editContactInfoText">Edit Contact Information</string>
     <string name="resetPasswordText">Reset Password</string>
     <string name="saveText">Save</string>
+    <string name="usernameSignupHint">Username: Enter at least 8 digits.</string>
 </resources>
