prettified list activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="ToggleCameraView">Toggle the camera view</string>
     <string name="faceView">FACE</string>
     <string name="frontView">FRONT</string>
+    <string name="add_text">add</string>
+    <string name="search_text">search</string>
+    <string name="empty_textview">List Title</string>
+    <string name="info_text">Details</string>
+    <string name="keyword_text">Filter</string>
+    <string name="show_text">Show</string>
+    <string name="hide_text">Hide</string>
 </resources>
