--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="title_Body">Body</string>
     <string name="title_Gallery">Gallary</string>
     <string name="title_List">List</string>
+    <string name="title_activity_map">MapActivity</string>
 </resources>
