Added the problem creation activity and used it in the problem list activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="ToggleCameraView">Toggle the camera view</string>
     <string name="faceView">FACE</string>
     <string name="frontView">FRONT</string>
+    <string name="ProblemCreationTitle">Create a problem</string>
+    <string name="ProblemCreationTitleText">Title (max. 30 characters)</string>
+    <string name="ProblemCreationDescription">Enter description</string>
+    <string name="save_button">SAVE</string>
+    <string name="DateTime">HH:MM</string>
 </resources>
