--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="title_Body">Body</string>
     <string name="title_Gallery">Gallary</string>
     <string name="title_List">List</string>
+    <string name="overlay_description">overlay</string>
 </resources>
