--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,8 @@
     <string name="slash">/</string>
     <string name="semiColon">;</string>
     <string name="colon">:</string>
+    <string name="user_assignment_settings">User Assignments</string>
+    <string name="user_assignment_assigned_list">This is a list of assignment users.</string>
+    <string name="user_assignment_remove">Remove</string>
+    <string name="user_assignment_select_list">Search and select user to view progress.</string>
 </resources>
