--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,9 @@
     <string name="semiColon">;</string>
     <string name="colon">:</string>
     <string name="title_activity_map">MapActivity</string>
+    <string name="set_a_notification_reminder">Set a notification reminder:</string>
+    <string name="channel_name">chanelName</string>
+    <string name="channel_description">chanelDescription</string>
+
 
 </resources>
