Finished the login part of the autologin
Need to uncouple the login button from the userObserver etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="daily">Daily</string>
     <string name="every_other_day">Every other day</string>
     <string name="delete">Delete</string>
+    <string name="DontHaveAccountPromp">Don\'t have an account? Sign up now!</string>
 </resources>
