--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="editContactInfoText">Edit Contact Information</string>
     <string name="resetPasswordText">Reset Password</string>
     <string name="saveText">Save</string>
-    <string name="usernameSignupHint">Username: Enter at least 8 digits.</string>
+    <string name="usernameSignupHint">Username: Enter at least 8 characters.</string>
     <string name="capture">Take a Photo</string>
     <string name="ToggleCameraView">Toggle the camera view</string>
     <string name="faceView">FACE</string>
