--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="daily">Daily</string>
     <string name="every_other_day">Every other day</string>
     <string name="delete">Delete</string>
+    <string name="preference_file_key">com.cybersix.markme.history</string>
 </resources>
