--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="every_other_day">Every other day</string>
     <string name="delete">Delete</string>
     <string name="preference_file_key">com.cybersix.markme.history</string>
+    <string name="change_lang_text">Select Your Language</string>
 </resources>
