--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="registration_failure">Registration Failed!</string>
     <string name="transfer_account_success">Transfer Successful!</string>
     <string name="transfer_account_failure">Transfer failed.</string>
+    <string name="signup_anways_prompt">Sign In Offline</string>
 </resources>
